// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Promo correctly 1`] = `
.c3 {
  color: #FFFFFF;
  font-size: 5rem;
  line-height: 5rem;
  text-transform: uppercase;
  font-weight: normal;
  font-family: 'Anton',Impact,sans-serif;
  -webkit-letter-spacing: 0.03rem;
  -moz-letter-spacing: 0.03rem;
  -ms-letter-spacing: 0.03rem;
  letter-spacing: 0.03rem;
  font-size: 3rem;
  line-height: 3rem;
}

.c4 {
  color: #FFFFFF;
  font-size: 1rem;
  line-height: 1rem;
  text-transform: inherit;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  padding: 0.5rem 1.25rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  font-size: 1rem;
  border-radius: 2rem;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  height: 3.125rem;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #000000;
}

.c5:hover {
  background-color: #969598;
  color: #000000;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
  background: #274084;
}

.c1 {
  width: 100%;
  max-width: 1200px;
  height: 100%;
  left: 0;
  right: 0;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2 {
  width: 100%;
  padding: 1.5rem 1.5rem 4rem;
  z-index: 1;
}

@media (min-width:740px) {
  .c3 {
    font-size: 4rem;
    line-height: 4rem;
    margin-bottom: 2rem;
  }
}

@media (min-width:1024px) {
  .c3 {
    font-size: 5rem;
    line-height: 5rem;
    margin-bottom: 2rem;
  }
}

@media (min-width:740px) {
  .c5 {
    width: auto;
  }
}

@media (min-width:1024px) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:1024px) {
  .c1 {
    min-height: calc(100vh - 90px);
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 70%;
    padding: 4rem 1.5rem;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 50%;
    padding: 8rem 1.5rem;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <h1
        className="c3"
        color="white"
        size="super"
      >
        Curabitur pretium tincidunt lacus
      </h1>
      <p
        className="c4"
        color="white"
        size="s"
      >
        Curabitur pretium tincidunt lacus. Nulla gravida orci a odio. Nullam varius, turpis et commodo, est eros bibendum elit, nec luctus magna sollicitudin.
      </p>
      <span>
        <a
          className="c5"
          color="white"
          href="/"
          target="_self"
          type="button"
        >
          Show me this
        </a>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders Promo correctly end position 1`] = `
.c6 {
  color: #FFFFFF;
  font-size: 5rem;
  line-height: 5rem;
  text-transform: uppercase;
  font-weight: normal;
  font-family: 'Anton',Impact,sans-serif;
  -webkit-letter-spacing: 0.03rem;
  -moz-letter-spacing: 0.03rem;
  -ms-letter-spacing: 0.03rem;
  letter-spacing: 0.03rem;
  font-size: 3rem;
  line-height: 3rem;
}

.c7 {
  color: #FFFFFF;
  font-size: 1rem;
  line-height: 1rem;
  text-transform: inherit;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c2 {
  display: block;
  width: 100%;
  height: 100%;
  position: relative;
}

.c3 {
  width: 100%;
  height: 100%;
  display: block;
  object-fit: cover;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  padding: 0.5rem 1.25rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  font-size: 1rem;
  border-radius: 2rem;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  height: 3.125rem;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #000000;
}

.c8:hover {
  background-color: #969598;
  color: #000000;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
  background: #274084;
  -webkit-clip-path: polygon(0 0,100% 0,100% 90%,0 101%);
  clip-path: polygon(0 0,100% 0,100% 90%,0 101%);
  border-radius: 0 0 0 2rem;
}

.c4 {
  width: 100%;
  max-width: 1200px;
  height: 100%;
  left: 0;
  right: 0;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c5 {
  width: 100%;
  padding: 1.5rem 1.5rem 4rem;
  z-index: 1;
}

.c1 {
  width: 100%;
  height: auto;
}

.c1 img {
  object-position: center;
}

@media (min-width:740px) {
  .c6 {
    font-size: 4rem;
    line-height: 4rem;
    margin-bottom: 2rem;
  }
}

@media (min-width:1024px) {
  .c6 {
    font-size: 5rem;
    line-height: 5rem;
    margin-bottom: 2rem;
  }
}

@media (min-width:740px) {
  .c8 {
    width: auto;
  }
}

@media (min-width:1024px) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:1024px) {
  .c0 {
    -webkit-clip-path: polygon(0 0,100% 0,100% 85%,0% 101%);
    clip-path: polygon(0 0,100% 0,100% 85%,0% 101%);
    border-radius: 0 0 0 4rem;
  }
}

@media (min-width:1024px) {
  .c4 {
    min-height: calc(100vh - 90px);
  }
}

@media (min-width:1024px) {
  .c5 {
    width: 70%;
    padding: 4rem 1.5rem;
  }
}

@media (min-width:1024px) {
  .c5 {
    width: 50%;
    padding: 8rem 1.5rem;
  }
}

@media (min-width:1024px) {
  .c1 {
    height: 100%;
    position: absolute;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2 lazyload"
      height="100%"
      width="100%"
    >
      <img
        alt=""
        className="c3 lazyload"
        data-lowsrc={null}
        data-sizes="auto"
        data-src="../promo.jpg"
        data-srcset="../promo.jpg"
        height="100%"
        src="../promo.jpg"
        srcSet="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        width="100%"
      />
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      <h1
        className="c6"
        color="white"
        size="super"
      >
        Curabitur pretium tincidunt lacus
      </h1>
      <p
        className="c7"
        color="white"
        size="s"
      >
        Curabitur pretium tincidunt lacus. Nulla gravida orci a odio. Nullam varius, turpis et commodo, est eros bibendum elit, nec luctus magna sollicitudin.
      </p>
      <span>
        <a
          className="c8"
          color="white"
          href="/"
          target="_self"
          type="button"
        >
          Show me this
        </a>
      </span>
    </div>
  </div>
</div>
`;
